--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -791,9 +791,16 @@
                                     fill="currentColor">
                                 </path>
                             </svg>
-                            <div data-bn-type="text" style="display: inline;">
-                                Invite friends &amp; get $100 off on tradingfees&nbsp;
+                            <div data-bn-type="text" style="display: inline;">Invite friends &amp; get $100 off on tradingfees&nbsp;
+                                <div style="display: inline;">
+                                    <a target="_blank" href="#" rel="noreferrer"> - Refer
+                                        a friend &gt;
+                                    </a>
+                                </div>
                             </div>
+                        </div>
+                        <div class="invite-right">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="css-tdpz7s"><path d="M6.697 4.575L4.575 6.697 9.88 12l-5.304 5.303 2.122 2.122L12 14.12l5.303 5.304 2.122-2.122L14.12 12l5.304-5.303-2.122-2.122L12 9.88 6.697 4.575z" fill="currentColor"></path></svg>
                         </div>
                     </div>
                 </div>
