--- a/templates/academy.html
+++ b/templates/academy.html
@@ -41,7 +41,7 @@
                                         </a>
                                         <div class="dropdown-content">
                                             <div class="dropdown_body">
-                                                <div class="drop_item_right">
+                                                <div class="drop_item_left">
                                                     <a href="#">
                                                         <div class="drop_clone">
                                                             <div class="logo_drop">
@@ -76,7 +76,7 @@
                                                         </div>
                                                     </a>
                                                 </div>
-                                                <div class="drop_item_left">
+                                                <div class="drop_item_right">
                                                     <a href="#">
                                                         <div class="drop_clone">
                                                             <div class="logo_drop">
@@ -134,7 +134,7 @@
                                         </a>
                                         <div class="dropdown-content">
                                             <div class="dropdown_body">
-                                                <div class="drop_item_right">
+                                                <div class="drop_item_left">
                                                     <a href="">
                                                         <div class="drop_clone_1">
                                                             <div class="logo_Articles">
@@ -169,6 +169,44 @@
                                                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"><path d="M12.243 8L8 12.243l4.243 4.242 4.242-4.242L12.243 8z" fill="currentColor"></path></svg>
                                                             </div>
                                                             <div class="text_dots">Trading</div>
+                                                        </div>
+                                                    </a>
+                                                </div>
+                                                <div class="drop_item_right">
+                                                    <a href="">
+                                                        <div class="drop_clone_1">
+                                                            <div class="logo_Articles">
+                                                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M4.014 21H20a2 2 0 002-2V3H6v15.857c0 1.179-.889 2.135-1.987 2.143zM8 11h5v6H8v-6zm12 0h-5v2h5v-2zm-5 4h5v2h-5v-2z" fill="url(#news-g_svg__paint0_linear)"></path><path d="M18 8h-8V6h8v2zM2 18.857V9h4v9.857C6 20.041 5.105 21 4 21s-2-.96-2-2.143z" fill="#76808F"></path><defs><linearGradient id="news-g_svg__paint0_linear" x1="16.5" y1="13.5" x2="16.5" y2="2" gradientUnits="userSpaceOnUse"><stop stop-color="#F0B90B"></stop><stop offset="1" stop-color="#F8D33A"></stop></linearGradient></defs></svg>
+                                                            </div>
+                                                            <div class="text_drop">
+                                                                <div class="head_1">Glossaries</div>
+                                                                <div class="head_1_text">See all crypto glossaries</div>
+                                                            </div>
+                                                        </div>
+                                                    </a>
+                                                    <div class="text_popular">Popular articles</div>
+                                                    <a href="">
+                                                        <div class="drop_dots">
+                                                            <div class="dots">
+                                                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"><path d="M12.243 8L8 12.243l4.243 4.242 4.242-4.242L12.243 8z" fill="currentColor"></path></svg>
+                                                            </div>
+                                                            <div class="text_dots">What Is Blockchain Technology? The Ultimate Guide</div>
+                                                        </div>
+                                                    </a>
+                                                    <a href="">
+                                                        <div class="drop_dots">
+                                                            <div class="dots">
+                                                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"><path d="M12.243 8L8 12.243l4.243 4.242 4.242-4.242L12.243 8z" fill="currentColor"></path></svg>
+                                                            </div>
+                                                            <div class="text_dots">A Beginner's Guide to Decentralized Finance (DeFi)</div>
+                                                        </div>
+                                                    </a>
+                                                    <a href="">
+                                                        <div class="drop_dots">
+                                                            <div class="dots">
+                                                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"><path d="M12.243 8L8 12.243l4.243 4.242 4.242-4.242L12.243 8z" fill="currentColor"></path></svg>
+                                                            </div>
+                                                            <div class="text_dots">What Is an NFT?</div>
                                                         </div>
                                                     </a>
                                                 </div>
