--- a/templates/academy.html
+++ b/templates/academy.html
@@ -239,7 +239,24 @@
                                             <i class="fa fa-caret-down" aria-hidden="true"></i>
                                         </a>
                                         <div class="dropdown-content">
-                                            <div></div>
+                                            <div class="dropdown_body node_pading node_flex">
+                                                <a href="">
+                                                    <div class="drop_clone">
+                                                        <div class="logo_drop">
+                                                            <svg style="margin: 0px;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M12 3L4 8v3h2v5H4v4h16v-4h-2v-5h2V8l-8-5zm3.5 8h-2.25v5h2.25v-5zm-4.75 0H8.5v5h2.25v-5z" fill="currentColor"></path></svg>
+                                                        </div>
+                                                        <div class="text_drop">Institutions</div>
+                                                    </div>
+                                                </a>
+                                                <a href="">
+                                                    <div class="drop_clone">
+                                                        <div class="logo_drop">
+                                                            <svg style="margin: 0px;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M4 16V4h16v12l-8 5-8-5zm7.994-4.11a2.807 2.807 0 100-5.615 2.807 2.807 0 000 5.615zm4.512 2.744A2.807 2.807 0 0014 13.094H9.99c-1.078 0-2.035.645-2.506 1.535l4.518 2.821 4.504-2.816z" fill="currentColor"></path></svg>
+                                                        </div>
+                                                        <div class="text_drop">Student Ambassador</div>
+                                                    </div>
+                                                </a>
+                                            </div>
                                         </div>
                                     </li>
                                 </lu>
