--- a/static/css/academy.css
+++ b/static/css/academy.css
@@ -323,6 +323,8 @@ body {
 .text_dots {
     color: white;
     text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .node_pading {
