--- a/static/css/bab_token.css
+++ b/static/css/bab_token.css
@@ -110,6 +110,126 @@ html {
     text-decoration: none;
 }
 
+.item_conten a svg {
+    width: 24px;
+    height: 24px;
+    margin: 11.5px 0px;
+    color: rgb(224, 224, 224);
+}
+
+.item_conten:hover svg {
+    color: rgb(252, 213, 53);
+}
+
+.item_conten:hover i {
+    transform: rotate(180deg);
+    margin-top: 5px;
+}
+
+.item_conten a {
+    cursor: pointer;
+    color: #EAECEF;
+    text-decoration: none;
+}
+
+.drop_text {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.drop_text i {
+    margin-left: 4px;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown_body {
+    border-radius: 8px;
+    padding: 16px 16px;
+    display: flex;
+    box-sizing: border-box;
+    margin: 0px;
+    background-color: rgb(30, 35, 41);
+    position: relative;
+    overflow: hidden;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    inset: 100% auto auto;
+    padding: 8px 0px 0px 0px;
+    transform: translate(-54px, 0px);
+    box-sizing: border-box;
+    margin: 0px;
+    min-width: 0px;
+    z-index: 1100;
+}
+
+.drop_clone {
+    box-sizing: border-box;
+    margin: 0px;
+    display: flex;
+    align-items: center;
+    border-radius: 8px;
+    cursor: pointer;
+    padding: 16px;
+}
+
+.drop_item_left {
+    width: 320px;
+}
+
+.drop_item_right {
+    width: 320px;
+}
+
+.logo_drop {
+    margin: 0px 16px 0px 0px;
+    min-width: 0px;
+}
+
+.logo_drop svg {
+    box-sizing: border-box;
+    margin: 0px;
+    min-width: 0px;
+    color: currentcolor;
+    width: 26px;
+    height: 26px;
+    font-size: 26px;
+    fill: currentcolor;
+}
+
+.head_1 {
+    font-size: 14px;
+    margin-bottom: 5px;
+}
+
+.text_drop {
+    white-space: nowrap;
+    color: white;
+    margin: 0px;
+    min-width: 0px;
+}
+
+.head_1_text {
+    margin: 0px;
+    font-size: 14px;
+    color: rgb(132, 142, 156);
+}
+
+.drop_clone:hover {
+    background-color: rgba(94, 94, 94, 0.164);
+}
+
 .item_conten:hover p {
     color: rgb(252, 213, 53);
 }
