--- a/templates/bab_token.html
+++ b/templates/bab_token.html
@@ -31,7 +31,7 @@
                                             </svg>
                                             <i class="fa fa-caret-down" aria-hidden="true"></i>
                                         </a>
-                                        <div class="dropdown-content">
+                                        <div class="dropdown-content node_size">
                                             <div class="dropdown_body">
                                                 <div class="drop_item_left">
                                                     <a href="#">
@@ -110,11 +110,68 @@
                             </div>
                         </div>
                         <div class="item-menu">
-                            <div class="item_conten">
-                                <p>Buy Crypto</p>
-                                <div class="vnd">EUR</div>
-                                <i class="fa fa-caret-down" aria-hidden="true"></i>
-                            </div>
+                            <lu>
+                                <li class="dropdown">
+                                    <a href="" class="drop_text">
+                                        <div class="item_conten">
+                                            <p>Buy Crypto</p>
+                                            <div class="vnd">EUR</div>
+                                            <i class="fa fa-caret-down" aria-hidden="true"></i>
+                                        </div>
+                                    </a>
+                                    <div class="dropdown-content">
+                                        <div class="dropdown_body display_block">
+                                            <div class="coin_item">
+                                                <div class="pay_w">Pay with</div>
+                                                <a href="#">
+                                                    <div class="coin_body">
+                                                        <div><img class="img_coin" src="../static/img/bab_token/5d13145e-c557-4519-96b6-360f8e8e1f02.png" alt=""></div>
+                                                        <div>EUR</div>
+                                                        <div><i class="fa fa-caret-down rota" aria-hidden="true"></i></div>
+                                                    </div>
+                                                </a>
+                                            </div>
+                                            <a href="#">
+                                                <div class="drop_clone">
+                                                    <div class="logo_drop">
+                                                        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="css-1s4hjvp"><use xlink:href="#bank-g"></use></svg>
+                                                    </div>
+                                                    <div class="text_drop">
+                                                        <div class="item_conten node_margin node_pading node_space">
+                                                            <div class="head_1" style="font-size: 16px;">Bank Deposit</div>
+                                                            <div class="vnd" style="margin-bottom: 5px;">HOT</div>
+                                                        </div>
+                                                        <div class="head_1_text" style="font-size: 12px;">Deposit EUR via SEPA or card</div>
+                                                    </div>
+                                                    <div class="arrow">
+                                                        <svg viewBox="0 0 18 15" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                                                                <path d="M10.5 15L9.1 13.6L14.2 8.5L5.68248e-07 8.5L7.43094e-07 6.5L14.2 6.5L9.1 1.4L10.5 -6.55671e-07L18 7.5L10.5 15Z"></path>
+                                                        </svg>
+                                                    </div>
+                                                </div>
+                                            </a>
+                                            <a href="#">
+                                                <div class="drop_clone">
+                                                    <div class="logo_drop">
+                                                        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="css-1s4hjvp"><use xlink:href="#bank-g"></use></svg>
+                                                    </div>
+                                                    <div class="text_drop">
+                                                        <div class="item_conten node_margin node_pading">
+                                                            <div class="head_1" style="font-size: 16px;">Credit/Debit Card</div>
+                                                        </div>
+                                                        <div class="head_1_text" style="font-size: 12px;">Buy crypto via Card, Apple Pay, Google Pay</div>
+                                                    </div>
+                                                    <div class="arrow">
+                                                        <svg viewBox="0 0 18 15" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                                                                <path d="M10.5 15L9.1 13.6L14.2 8.5L5.68248e-07 8.5L7.43094e-07 6.5L14.2 6.5L9.1 1.4L10.5 -6.55671e-07L18 7.5L10.5 15Z"></path>
+                                                        </svg>
+                                                    </div>
+                                                </div>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </li>
+                            </lu>
                         </div>
                         <div class="item-menu">
                             <div class="item_conten">
