--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -1543,7 +1543,12 @@
 
                     </div>
                 </div>
-                <div class="marketActivity"></div>
+                <div class="marketActivity">
+                    <div class="marketActivity-header">
+                        Top Movers
+                        <a data-bn-type="link" href="#">FAQ&gt;</a>
+                    </div>
+                </div>
                 <div class="basictable"></div>
                 <div class="footer"></div>
             </div>
