--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -1547,6 +1547,9 @@
                     <div class="marketActivity-header">
                         Top Movers
                         <a data-bn-type="link" href="#">FAQ&gt;</a>
+                        <div class="right">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="css-3kwgah"><path d="M9 7.143L11.857 10l2.857-2.857 1.143 1.143-4 4-4-4L9 7.143z" fill="currentColor"></path><path d="M9 11.714l2.857 2.857 2.857-2.857 1.143 1.143-4 4-4-4L9 11.714z" fill="currentColor"></path></svg>
+                        </div>
                     </div>
                 </div>
                 <div class="basictable"></div>
