Trade_coin: MarketActivity - Add heads into body - Update html, css and add demo57

--- a/static/css/trade_coin.css
+++ b/static/css/trade_coin.css
@@ -879,7 +879,7 @@ i {
 }
 
 .status-green {
-    color: rgb(14, 203, 129);
+    color: rgb(14, 203, 129) !important;
 }
 
 .contract-price {
@@ -1215,11 +1215,11 @@ i {
 }
 
 .status-red {
-    color: rgb(246, 70, 93);
+    color: rgb(246, 70, 93) !important;
 }
 
 .status-normal {
-    color: rgb(183, 189, 198);
+    color: rgb(183, 189, 198) !important;
 }
 
 .text-normal {
@@ -1289,7 +1289,7 @@ i {
 }
 
 .status-orange {
-    color: rgb(240, 185, 11);
+    color: rgb(240, 185, 11) !important;
 }
 
 .chart-candle-flex {
@@ -1390,4 +1390,22 @@ i {
 }
 .marketActivity-header svg:hover{
     background-color: rgb(240, 185, 11);
+}
+.marketActivity-body{
+    padding: 4px 16px 0 16px;
+    position: relative;
+    transition: height 0.3s ease 0s;
+    height: 120px;
+}
+.MA-body-header{
+    margin-bottom: 8px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 12px;
+}
+.MA-body-header div{
+    margin-right: 6px;
+    cursor: pointer;
+    color: rgb(132, 142, 156);
 }
