--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -791,7 +791,8 @@
                                     fill="currentColor">
                                 </path>
                             </svg>
-                            <div data-bn-type="text" style="display: inline;">Invite friends &amp; get $100 off on tradingfees&nbsp;
+                            <div data-bn-type="text" style="display: inline;">Invite friends &amp; get $100 off on
+                                tradingfees&nbsp;
                                 <div style="display: inline;">
                                     <a target="_blank" href="#" rel="noreferrer"> - Refer
                                         a friend &gt;
@@ -800,7 +801,11 @@
                             </div>
                         </div>
                         <div class="invite-right">
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="css-tdpz7s"><path d="M6.697 4.575L4.575 6.697 9.88 12l-5.304 5.303 2.122 2.122L12 14.12l5.303 5.304 2.122-2.122L14.12 12l5.304-5.303-2.122-2.122L12 9.88 6.697 4.575z" fill="currentColor"></path></svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="css-tdpz7s">
+                                <path
+                                    d="M6.697 4.575L4.575 6.697 9.88 12l-5.304 5.303 2.122 2.122L12 14.12l5.303 5.304 2.122-2.122L14.12 12l5.304-5.303-2.122-2.122L12 9.88 6.697 4.575z"
+                                    fill="currentColor"></path>
+                            </svg>
                         </div>
                     </div>
                 </div>
@@ -1548,7 +1553,21 @@
                         Top Movers
                         <a data-bn-type="link" href="#">FAQ&gt;</a>
                         <div class="right">
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="css-3kwgah"><path d="M9 7.143L11.857 10l2.857-2.857 1.143 1.143-4 4-4-4L9 7.143z" fill="currentColor"></path><path d="M9 11.714l2.857 2.857 2.857-2.857 1.143 1.143-4 4-4-4L9 11.714z" fill="currentColor"></path></svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="css-3kwgah">
+                                <path d="M9 7.143L11.857 10l2.857-2.857 1.143 1.143-4 4-4-4L9 7.143z"
+                                    fill="currentColor"></path>
+                                <path d="M9 11.714l2.857 2.857 2.857-2.857 1.143 1.143-4 4-4-4L9 11.714z"
+                                    fill="currentColor"></path>
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="marketActivity-body">
+                        <div class="MA-body-header">
+                            <div class="item status-orange">All</div>
+                            <div class="item">Change</div>
+                            <div class="item">New High/Low</div>
+                            <div class="item">Fluctuation</div>
+                            <div class="item">Volume</div>
                         </div>
                     </div>
                 </div>
