--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -1569,6 +1569,17 @@
                             <div class="item">Fluctuation</div>
                             <div class="item">Volume</div>
                         </div>
+                        <a href="#">
+                            <div>
+                                <div class="item">
+                                    <span>HFT</span>
+                                    /BTC
+                                </div>
+                                <div class="item">18:37:05</div>
+                            </div>
+                            
+                        </a>
+                        
                     </div>
                 </div>
                 <div class="basictable"></div>
