--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -1577,7 +1577,16 @@
                                 </div>
                                 <div class="item">18:37:05</div>
                             </div>
-                            
+                            <div style="display: flex ;align-items: flex-end;flex-direction: column;">
+                                <div class="item">
+                                    <span class="status-green">+20.89%</span>
+                                </div>
+                                <div class="item"><span> New 7day Low</span></div>
+                            </div>
+                            <div class="thirdCol">
+                                <div></div>
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 16" fill="none" class="css-3kwgah"><path d="M12.535 2v2.192L16 6.385l3.465-2.192V2L16 4.193 12.535 2z" fill="currentColor"></path><path d="M12.535 5.807V8L16 10.193 19.465 8V5.807L16 8l-3.465-2.193z" fill="currentColor"></path><path d="M12.535 9.615v2.192L16 14l3.465-2.193V9.615L16 11.807l-3.465-2.192zm9.445-2.611H29v1.992h-7.02V7.004zM3 7.004h7.02v1.992H3V7.004z" fill="currentColor"></path></svg>
+                            </div>
                         </a>
                         
                     </div>
