--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -1585,10 +1585,28 @@
                             </div>
                             <div class="thirdCol">
                                 <div></div>
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 16" fill="none" class="css-3kwgah"><path d="M12.535 2v2.192L16 6.385l3.465-2.192V2L16 4.193 12.535 2z" fill="currentColor"></path><path d="M12.535 5.807V8L16 10.193 19.465 8V5.807L16 8l-3.465-2.193z" fill="currentColor"></path><path d="M12.535 9.615v2.192L16 14l3.465-2.193V9.615L16 11.807l-3.465-2.192zm9.445-2.611H29v1.992h-7.02V7.004zM3 7.004h7.02v1.992H3V7.004z" fill="currentColor"></path></svg>
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 16" fill="none"><path d="M12.535 2v2.192L16 6.385l3.465-2.192V2L16 4.193 12.535 2z" fill="currentColor"></path><path d="M12.535 5.807V8L16 10.193 19.465 8V5.807L16 8l-3.465-2.193z" fill="currentColor"></path><path d="M12.535 9.615v2.192L16 14l3.465-2.193V9.615L16 11.807l-3.465-2.192zm9.445-2.611H29v1.992h-7.02V7.004zM3 7.004h7.02v1.992H3V7.004z" fill="currentColor"></path></svg>
                             </div>
                         </a>
-                        
+                        <a href="#">
+                            <div>
+                                <div class="item">
+                                    <span>STG</span>
+                                    /BTC
+                                </div>
+                                <div class="item">18:50:33</div>
+                            </div>
+                            <div style="display: flex ;align-items: flex-end;flex-direction: column;">
+                                <div class="item">
+                                    <span class="status-red">-8.73%</span>
+                                </div>
+                                <div class="item"><span> New 7day Low</span></div>
+                            </div>
+                            <div class="thirdCol">
+                                <div></div>
+                                <svg  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 16" fill="none" class="status-red"><path d="M19.484 3v2.676L16.02 8.353l-3.465-2.677V3l3.465 2.676L19.484 3z" fill="currentColor"></path><path d="M19.484 7.647v2.676L16.02 13l-3.465-2.676V7.648l3.465 2.676 3.464-2.676zM10.04 9.216H3.02V6.784h7.02v2.432zm18.98 0H22V6.784h7.02v2.432z" fill="currentColor"></path></svg>
+                            </div>
+                        </a>
                     </div>
                 </div>
                 <div class="basictable"></div>
