--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -808,6 +808,12 @@
                             </svg>
                         </div>
                     </div>
+                    <div class="orderform-body">
+                        <div class="orderform-bHeader">
+                            <div class="orderform-bItem">Spot</div>
+                            <div class="orderform-bItem">Cross</div>
+                        </div>
+                    </div>
                 </div>
                 <div class="market">
                     <div class="market-header">
