Trade_coin: Orderform - add other itemHeaders in body using flex and width - Update html, css and add demo62

--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -812,6 +812,12 @@
                         <div class="orderform-bHeader">
                             <div class="orderform-bItem">Spot</div>
                             <div class="orderform-bItem">Cross</div>
+                            <div class="orderform-bItem">Isolated 10x</div>
+                            <div style="display: flex; flex: 1;"></div>
+                            <div class="orderform-bItem">
+                                <a href="">Spot Grid</a>
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="css-yl1yvv"><path d="M10.5 20v-3h3v3h-3zM10.5 7V4h3v3h-3zM10.5 10.5v3h3v-3h-3z" fill="#76808F"></path></svg>
+                            </div>
                         </div>
                     </div>
                 </div>
