--- a/static/css/trade_coin.css
+++ b/static/css/trade_coin.css
@@ -1364,7 +1364,30 @@ i {
     /* background-color: rgb(22, 26, 30); */
     border-top: 2px solid transparent;
     border-bottom: 1px solid rgb(43, 49, 58);
-    padding: 20px 45px;
+    width: 120px;
+}
+.orderform-bItem a{
+    box-sizing: border-box;
+    margin: 0px 8px 0px 0px;
+    min-width: 0px;
+    color: rgb(132, 142, 156);
+    line-height: 20px;
+    font-size: 12px;
+    border-right: 1px solid rgb(71, 77, 87);
+    padding-right: 8px;
+    text-decoration: underline;
+    line-height: 1.3;
+}
+.orderform-bItem svg{
+    box-sizing: border-box;
+    margin: 0px;
+    min-width: 0px;
+    fill: currentcolor;
+    font-size: 20px;
+    cursor: pointer;
+    color: rgb(61, 70, 83);
+    width: 1em;
+    height: 1em;
 }
 /* ------------------------------------------------ */
 .marketActivity-header{
