Trade_coin: Orderform - Add active attribute for item header in body - Update html, css and add demo63

--- a/static/css/trade_coin.css
+++ b/static/css/trade_coin.css
@@ -1389,6 +1389,12 @@ i {
     width: 1em;
     height: 1em;
 }
+.orderform-bItem.active{
+    border-top: 2px solid rgb(240, 185, 11);
+    border-bottom: 1px solid transparent;
+    color: rgb(234, 236, 239);
+    background-color: rgb(30, 32, 38);
+}
 /* ------------------------------------------------ */
 .marketActivity-header{
     box-sizing: border-box;
