--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -811,7 +811,7 @@
                     <div class="orderform-body">
                         <div class="orderform-bHeader">
                             <div class="orderform-bItem">Spot</div>
-                            <div class="orderform-bItem">Cross</div>
+                            <div class="orderform-bItem active">Cross <span class="status-orange" style="margin-left: 5px;">3x</span></div>
                             <div class="orderform-bItem">Isolated 10x</div>
                             <div style="display: flex; flex: 1;"></div>
                             <div class="orderform-bItem">
